# afterburner-game-old

./: .gitignore  .gitmodules  ATTRIBUTIONS.md  CMakeLists.txt  README.md  build.py  wscript  xash3d-gdb.py
assets/graphics/: game-logo.psd
assets/models/: .gitignore
assets/models/hl_glock/w_9mmhandgun/: w_9mmhandgun_wrld_glock.smd
assets/models/nf_frinesi/p_frinesi/: idle1_ani.smd
assets/models/nf_frinesi/v_frinesi/: reholster_ani.smd  v_frinesi.qc  v_frinesi_hands_reference_ref.smd
assets/models/nf_grenadelauncher/: v_grenadelauncher.mdl
assets/models/nf_grenadelauncher/p_grenadelauncher/: idle1_ani.smd  p_grenadelauncher.qc  p_grenadelauncher_REFERENCE_ref.smd
assets/models/nf_grenadelauncher/v_grenadelauncher/: draw_ani.smd  fire_ani.smd  holster_ani.smd  idle1_ani.smd  idle2_ani.smd  reload_ani.smd  v_grenadelauncher.qc  v_grenadelauncher_hands_referenc_ref.smd  v_grenadelauncher_reference_ref.smd
assets/models/nf_grenadelauncher/w_ammo_grenadelauncher/: idle1_ani.smd  w_ammo_grenadelauncher.qc  w_ammo_grenadelauncher_REFERENCE_ref.smd
assets/models/nf_grenadelauncher/w_grenade_projectile/: idle1_ani.smd  w_grenade_projectile.qc  w_grenade_projectile.qce  w_grenade_projectile_ref.smd
assets/models/nf_grenadelauncher/w_grenadelauncher/: idle1_ani.smd  w_grenadelauncher.qc  w_grenadelauncher_reference_ref.smd
assets/models/nf_p99/v_p99/: idle1_ani.smd  v_p99.qc
assets/models/nf_p99/w_ammo_p99/: w_ammo_p99_REFERENCE_ref.smd
assets/models/nf_raptor/p_raptor/: idle1_ani.smd  p_raptor.qc  p_raptor_REFERENCE_ref.smd
assets/utils/player-skeleton-convert/: fix_animations.py  player_skeleton_convert.py  smd_bones.py  smd_reader.py  smd_writer.py  strip-redundant-bones.py
cl_dll/: CMakeLists.txt  ammo.cpp  cl_dll.h  cl_util.h  entity.cpp  ev_common.cpp  ev_hldm.cpp  ev_hldm.h  eventscripts.h  health.cpp  hud_redraw.cpp  hud_spectator.cpp  input_goldsource.cpp  message.cpp  scoreboard.cpp  statusbar.cpp  view.cpp
cl_dll/events/: baseweaponeventplayer.cpp  baseweaponeventplayer.h  hitscanweaponeventplayer.cpp  hitscanweaponeventplayer.h  ieventplayer.h  projectileweaponeventplayer.cpp  projectileweaponeventplayer.h
cl_dll/hl/: hl_baseentity.cpp  hl_events.cpp  hl_weapons.cpp
common/: basemonster.h  cbase.h  game.h  gamerules.h  nodes.h  player.h  skill.h  util.h  vector_classes.h
content/afterburner/: config.cfg  game.icns  game.tga  gameinfo.txt  liblist.gam  skill.cfg  video.cfg
content/afterburner/events/: weapon_generictest_fire02.sc
content/afterburner/maps/: ab_boxmap.bsp  hl_boxmap.bsp  weapon_accuracy_nf.bsp  weapon_accuracy_nf.rmf
content/afterburner/models/: v_p99.mdl
dlls/: CMakeLists.txt  client.cpp  combat.cpp  game.cpp  gamerules.cpp  ggrenade.cpp  glock.cpp  multiplay_gamerules.cpp  nodes.cpp  player.cpp  python.cpp  singleplay_gamerules.cpp  util.cpp  weapons.cpp  weapons.h
dlls/bots/: bot.h  bot_ai.cpp  bot_callbacks.cpp  bot_callbacks.h  bot_commands.cpp  bot_commands.h  bot_cvars.cpp  bot_cvars.h  bot_fightstyle.cpp  bot_misc.cpp  bot_misc.h  bot_nav.cpp  bot_stats.cpp  botfactory.cpp  botfactory.h  botgamerulesinterface.cpp  botgamerulesinterface.h
dlls/bots/collectables/: bot_collectable_weapon.h  ibotcollectable.h
dlls/bots/itemattributes/: botweaponattributes.h
dlls/bots/profiles/: botprofileparser.cpp  botprofileparser.h  botprofiletable.cpp  botprofiletable.h
dlls/weapons/: genericweapon.cpp  genericweapon.h  genericweaponattributes.h  weapon_generictest.cpp  weapon_generictest.h  weapon_p99.cpp  weapon_p99.h  weaponids.h  weaponregistry.cpp  weaponregistry.h
game_shared/: studio_utils_shared.cpp  studio_utils_shared.h
game_shared/rapidjson_helpers/: rapidjson_helpers.cpp  rapidjson_helpers.h
game_shared/util/: weightedvaluelist.h
game_shared/weaponattributes/: genericweaponattributedefs.h  genericweaponattributes.cpp  genericweaponattributes.h  weaponatts_ammobasedattack.h  weaponatts_animations.h  weaponatts_baseattack.h  weaponatts_basefiremechanic.h  weaponatts_collection.cpp  weaponatts_collection.h  weaponatts_core.h  weaponatts_cvars.h  weaponatts_firemode.h  weaponatts_hitscanfiremechanic.h  weaponatts_meleeattack.h  weaponatts_projectilefiremechanic.h  weaponatts_skill.h  weaponatts_sound.h
game_shared/weaponattributes_new/: weaponatts_ammobasedattack.h  weaponatts_ammodef.h  weaponatts_base.h  weaponatts_baseattack.h  weaponatts_basefiremode.h  weaponatts_client.h  weaponatts_collection.cpp  weaponatts_collection.h  weaponatts_core.h  weaponatts_skillrecord.cpp  weaponatts_skillrecord.h  weaponatts_soundset.h  weaponatts_viewmodel.h
game_shared/weapons/: ammodefs.cpp  ammodefs.h  crossbow.cpp  egon.cpp  gauss.cpp  generichitscanweapon.cpp  generichitscanweapon.h  genericmeleeweapon.cpp  genericmeleeweapon.h  genericprojectileweapon.cpp  genericprojectileweapon.h  genericweapon.cpp  genericweapon.h  genericweaponattributes.cpp  genericweaponattributes.h  glock.cpp  handgrenade.cpp  hornetgun.cpp  mp5.cpp  python.cpp  rpg.cpp  satchel.cpp  shotgun.cpp  squeakgrenade.cpp  tripmine.cpp  weapon_fists.cpp  weapon_fists.h  weapon_fists_atts.h  weapon_frinesi.cpp  weapon_frinesi.h  weapon_frinesi_atts.h  weapon_generictest.cpp  weapon_generictest.h  weapon_grenadelauncher.cpp  weapon_grenadelauncher.h  weapon_grenadelauncher_atts.h  weapon_p99.cpp  weapon_p99.h  weapon_p99_atts.h  weapon_pref_weights.h  (+8 more)
pm_shared/: pm_shared.c
shared_utils/cpp/gamelib/: fileLoaders_gamelib.cpp  fileLoaders_gamelib.h  logInterface_gamelib.cpp  logInterface_gamelib.h  projectInterface_gamelib.cpp  projectInterface_gamelib.h  rapidjson_helpers_gamelib.h
shared_utils/cpp/mainui/: projectInterface_mainui.cpp  rapidjson_helpers_mainui.h
shared_utils/cpp/projectInterface/: IProjectInterface.h
shared_utils/cpp/rapidjson_helpers/: rapidjson_helpers.cpp  rapidjson_helpers.h
(+97 files in other folders)
